# orion-ane

./: .gitignore  README.md  _bench_worker.py  _test_generation.py  bench_distill_ab.py  bench_speculative.py  bench_speculative_local.py  g17p_decoded_counters.json  gen_mil_reference.py  gpu_counter_hash_mapping.json  profile_forward_pass.py  pyproject.toml  test_ane_attention_ops.py  test_ane_attention_v2.py  test_c_forward.py  test_coreml_mil  test_coreml_mil.m  test_direct_ane.py  test_fused_qkv.py  test_native  test_native.m  x-post-followup.md
.claude/: launch.json
agent/: agent.py  agent_v2.py  ane_classifier.py  briefing_assembler.py  browser.py  context_tracker.py  continuous_embed.py  feedback_loop.py  heartbeat.py  idle_queue.py  live_stress_test.py  memory_bridge.py  memory_cache.py  memory_usage_tracker.py  metrics.json  midas_terminal.py  midas_ui.py  monitor.py  query_classifier.py  reasoning_chain.py  research_tools.py  retrieval_logger.py  router.py  router_improver.py  rule_classifier.py  scanner.py  scanner_service.py  signal_bus.py  stress_test.py  subconscious_daemon.py  synthesizer.py  system_monitor.py  telegram_bot.py  test_agent_v2.py  test_router.py  tool_executor.py
bridge/: Makefile  ane_bridge.h  ane_bridge.m  forward_pass.c  forward_pass.h  libane_bridge.dylib
distill/: README.md  dashboard.html  export_weights.py  generate_teacher.py  import_weights.py  prepare_data.py  test_pipeline.py  train_bridge.py
distill_mlx/: distill.py
dual_inference/: benchmark.py  engine.py
memory/: README.md  __init__.py  ane_server.py  cli.py  (+10 more)
(+40 files in other folders)
