[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom-memory"
version = "0.1.0"
description = "Zero-cost persistent memory for local LLMs — extraction, embedding, and continuous enrichment"
readme = "memory/README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nick Lo"},
]
keywords = [
    "llm", "memory", "obsidian", "knowledge-graph", "apple-silicon",
    "neural-engine", "local-ai", "chromadb", "enrichment",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dashboard = ["aiohttp>=3.9.0"]
all = ["aiohttp>=3.9.0"]

[project.urls]
Homepage = "https://github.com/MidasMulli/orion-ane"
Repository = "https://github.com/MidasMulli/orion-ane"

[project.scripts]
phantom = "phantom_memory.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["phantom_memory*"]

[tool.setuptools.package-data]
phantom_memory = ["README.md", "SAMPLE_INSIGHT.md", "dashboard.py"]
